--- a/AICTE Internships/Green Skill/ForestFireDetectDL.ipynb
+++ b/AICTE Internships/Green Skill/ForestFireDetectDL.ipynb
@@ -28,6 +28,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Step 1**\n",
+        "**Data Collecting and visualising**"
+      ],
+      "metadata": {
+        "id": "pRpZKWWfiBLY"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -47,6 +57,7 @@
         }
       ],
       "source": [
+        "\n",
         "import kagglehub\n",
         "\n",
         "# Download latest version\n",
@@ -272,8 +283,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# week 2\n",
-        "#*Preprocessing and CNN building*"
+        "# **Step 2**\n",
+        "#*Preprocessing and building CNN n/w*"
       ],
       "metadata": {
         "id": "x3rKIIAoMJOe"
@@ -395,8 +406,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Week 3\n",
-        "#*Final touchup*\n",
+        "# **Step 3**\n",
+        "#*Compiling and Training of the model*\n",
         "**_model is already build, lets compile the model and train it_**"
       ],
       "metadata": {
@@ -640,6 +651,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Evaluating of the model**"
+      ],
+      "metadata": {
+        "id": "c7ZdhwuMitIH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Evaluate the model - plotting training and validation acc\n",
@@ -759,6 +779,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Save the model\n"
+      ],
+      "metadata": {
+        "id": "L0oUggTmi01W"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Save the model\n",
@@ -769,6 +798,15 @@
       },
       "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Testing of the model"
+      ],
+      "metadata": {
+        "id": "LK8kPbnOi6ef"
+      }
     },
     {
       "cell_type": "code",
